--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/bloodfuse.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="BloodFuse - Donate and Request Blood" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <title>BloodFuse</title>
   </head>
   <body>
